About us page eng version

--- a/src/pages/en/about-us.html
+++ b/src/pages/en/about-us.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="ua">
+<html lang="en">
 <head>
   <!--deletestart-->
   <link rel="stylesheet" type="text/css" href="../assets/scss/main.scss"/>
@@ -8,6 +8,7 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="google" content="notranslate">
   <link rel="icon" href="/favicon.ico">
   <title>Council of freedom</title>
   <!-- Google Tag Manager -->
@@ -36,13 +37,13 @@
 
 <header class="header">
   <div class="container">
-    <a href="/" class="header_logo">
+    <a href="/en/" class="header_logo">
       <img src="/assets/img/svg/logo.svg" alt="Logo">
     </a>
 
     <div class="lang">
-      <a href="/en/about-us.html" class="lang-item">en</a>
-      <div class="lang-item active">ua</div>
+      <div class="lang-item active">en</div>
+      <a href="/about-us.html" class="lang-item">ua</a>
     </div>
 
     <div class="socials">
@@ -61,81 +62,44 @@
 
   <!--NAVIGATION-->
   <div class="page_nav js-nav-container">
-
     <div class="page_nav-item">
-      <a href="about-humanitarian-aid.html" class="page_nav-item_text">Збір засобів для гуманітарної допомоги</a>
+      <a href="about-humanitarian-aid.html" class="page_nav-item_text">Fundraising for humanitarian assistance</a>
     </div>
     <div class="page_nav-item">
-      <a href="send-humanitarian.html" class="page_nav-item_text">Надіслати гуманітарну допомогу</a>
+      <a href="send-humanitarian.html" class="page_nav-item_text">Giving campaign</a>
     </div>
     <div class="page_nav-item">
-      <a href="get-humanitarian.html" class="page_nav-item_text">Отримати гуманітарну допомогу</a>
+      <a href="get-humanitarian.html" class="page_nav-item_text">Getting the Humanitarian Assistance</a>
     </div>
     <div class="page_nav-item">
-      <a href="infrastructure.html" class="page_nav-item_text">Збір коштів на відновлення зруйнованого житла та
-        інфраструктури
+      <a href="infrastructure.html" class="page_nav-item_text">Raising funds for reconstruction of ruined buildings and
+        infrastructure
       </a>
     </div>
     <div class="page_nav-item active">
-      <div class="page_nav-item_text">Про нас</div>
+      <div class="page_nav-item_text">About us</div>
     </div>
   </div>
   <!--NAVIGATION FINISH-->
-
-  <!--Блок опис-->
-  <section class="description">
-    <div class="description_img">
-      <picture>
-        <source srcset="/assets/img/about-humanitarian-img-mobile.png" media="(max-width: 768px)">
-        <img src="/assets/img/about-humanitarian-img.png" alt="about humanitarian image">
-      </picture>
-    </div>
-    <div class="description_info">
-      <h2 class="description_info-title">
-        Про організацію
-      </h2>
-      <div class="description_info-text">
-        <p>
-          Війна призупинила можливість поставок до України найважливішого - медикаментів та харчів. Багато людей
-          залишилось без даху над головою - їм надають прихисток, проте ресурсів не вистачає. Ми робимо усе можливе, щоб
-          попередити гуманітарну кризу. Долучайтеся до порятунку. Війна призупинила можливість поставок до України
-          найважливішого - медикаментів та харчів. Багато людей залишилось без даху над головою - їм надають прихисток,
-          проте ресурсів не вистачає. Ми робимо усе можливе, щоб попередити гуманітарну кризу. Долучайтеся до порятунку.
-        </p>
-        <p>
-          Війна призупинила можливість поставок до України найважливішого - медикаментів та харчів. Багато людей
-          залишилось без даху над головою - їм надають прихисток, проте ресурсів не вистачає. Ми робимо усе можливе, щоб
-          попередити гуманітарну кризу. Долучайтеся до порятунку. Війна призупинила можливість поставок до України
-          найважливішого - медикаментів та харчів. Багато людей залишилось без даху над головою - їм надають прихисток,
-          проте ресурсів не вистачає. Ми робимо усе можливе, щоб попередити гуманітарну кризу. Долучайтеся до порятунку.
-        </p>
-      </div>
-    </div>
-
-  </section>
-  <!--Блок опис FINISH-->
-
 
   <div class="blocks">
     <!--Block 1-->
     <div class="block_one align-top">
       <div class="block_one-info">
-        <div class="block_one-info_title">Наша міссія:</div>
+        <div class="block_one-info_title">about us:</div>
         <div class="block_one-info_text">
           <p>
-            Council of Freedom - об’єднання вільних духом людей з активною життєвою позицією.
+            The Council of Freedom is an association of free-spirited people with an active position in life.
           </p>
-
           <p>
-            Громадська організація Рада Свободи була створена у 2010 році для реалізації благодійних, соціальних та
-            гуманітарних проєктів.
+            The international NGO “Council of Freedom” was established to implement charitable, social and humanitarian
+            projects.
           </p>
-
           <p>
-            Нашою головною ідеологією завжди було - зробити людей трохи щасливішими, а світ добрішими та кращим. У такий
-            скрутний для нашої країни час, ми не можемо залишитися осторонь, і зосереджуємо всі наші зусилля та інших не
-            байдужих людей на допомозі та підтримці тих, хто цього потребує, ставши заручниками жорстокої
-            несправедливості, яка змінила життя кожного українця, та і людей по всьому світу назавжди.
+            Our main ideology has always been to make people a little happier and the world kinder and better. At such a
+            difficult time for our country, we cannot stay away, and we focus all our efforts and other caring people on
+            helping and supporting those in need, becoming hostages of the brutal injustice that has changed the lives
+            of every Ukrainian and people around the world. the world forever.
           </p>
         </div>
         <!--        <div class="block_one-info_btn">-->
@@ -149,7 +113,7 @@
   </div>
 
   <section class="docs-slider">
-    <div class="docs-slider-title title-1 center">Уставні документи:</div>
+    <div class="docs-slider-title title-1 center">statutory documents:</div>
     <div class="docs-slider_wrap">
 
       <div class="docs-slider-list js-docs-slider">
@@ -181,18 +145,17 @@
   <section class="description">
     <div class="description_info">
       <div class="description_info-title">
-        Наші цінності та принципи:
+        Our values and principles:
       </div>
       <div class="description_info-text">
         <ul>
-          <li>эффективность и профессионализм,</li>
-          <li>прозрачность, диалог и сотрудничество,</li>
-          <li>системный подход к решению проблем,</li>
-          <li>открытость и развитие.</li>
+          <li>efficiency and professionalism,</li>
+          <li>transparency, dialogue and cooperation,</li>
+          <li>systematic approach to problem solving,</li>
+          <li>openness and development.</li>
         </ul>
-        На нашем сайте легко найти отчет за любой месяц, а также результаты аудиторских проверок.
-        Наша команда открыта новому, всегда готова выслушать ваши идеи в социальной сфере и содействовать их наиболее
-        эффективной реализации.
+        On our site it is easy to find the report for any month, and also results of audits. Our team is open to the
+        new, always ready to listen to your ideas in the social sphere and promote their most effective implementation.
       </div>
 
       <div class="description_info-btns">
@@ -214,13 +177,13 @@
 
 <footer class="footer">
   <div class="container">
-    <a href="/" class="footer_logo">
+    <a href="/en/" class="footer_logo">
       <img src="/assets/img/svg/logo-white.svg" alt="Logo">
     </a>
 
     <div class="lang">
-      <a href="/en/about-us.html" class="lang-item">en</a>
-      <div class="lang-item active">ua</div>
+      <div class="lang-item active">en</div>
+      <a href="/about-us.html" class="lang-item">ua</a>
     </div>
 
     <div class="socials">
