--- a/src/pages/en/index.html
+++ b/src/pages/en/index.html
@@ -73,6 +73,9 @@
         infrastructure
       </a>
     </div>
+    <div class="page_nav-item">
+      <a href="about-us.html" class="page_nav-item_text">About us</a>
+    </div>
   </div>
   <!--NAVIGATION END-->
 
@@ -225,13 +228,18 @@
       <img width="1600" height="340" src="/assets/img/flag-banner.png"/>
     </div>
     <div class="width_block-info">
-      <div class="left_part">
+      <div class="left_part mobile-hidden">
         <img src="/assets/img/svg/icon-freedom.svg" alt="freedom icon">
       </div>
       <div class="right_part">
         <div class="width_block-info_title title-1">
           About the organization
         </div>
+
+        <div class="right_part-img desktop-hidden">
+          <img src="/assets/img/logo.png" alt="freedom logo">
+        </div>
+
         <div class="width_block-info_text">
           <p>The Council of Freedom is an association of free-spirited people with an active position in life.</p>
           <p>The international NGO “Council of Freedom” was established to implement charitable, social and humanitarian
