--- a/src/pages/en/infrastructure.html
+++ b/src/pages/en/infrastructure.html
@@ -66,6 +66,9 @@
       </div>
     </div>
     <div class="page_nav-item">
+      <a href="about-us.html" class="page_nav-item_text">About us</a>
+    </div>
+    <div class="page_nav-item">
       <div class="page_nav-item_text" data-target-block="block-bank">Bank Transfer</div>
     </div>
   </div>
