--- a/en/get-humanitarian.html
+++ b/en/get-humanitarian.html
@@ -9,7 +9,7 @@
   <meta name="google" content="notranslate">
   <link rel="icon" href="/favicon.ico">
   <title>Council of freedom</title>
-<link href="../assets/css/app.124b537749952c4db21a.css" rel="stylesheet"></head>
+<link href="../assets/css/app.11287803b27f76e7d130.css" rel="stylesheet"></head>
 <body class="inner-page">
 
 <header class="header">
@@ -51,6 +51,9 @@
       <a href="infrastructure.html" class="page_nav-item_text">Raising funds for reconstruction of ruined buildings and
         infrastructure
       </a>
+    </div>
+    <div class="page_nav-item">
+      <a href="about-us.html" class="page_nav-item_text">About us</a>
     </div>
   </div>
   <!--NAVIGATION FINISH-->
@@ -138,5 +141,5 @@
     </div>
   </div>
 </footer>
-<script type="text/javascript" src="../assets/js/vendors.124b537749952c4db21a.js"></script><script type="text/javascript" src="../assets/js/app.124b537749952c4db21a.js"></script></body>
+<script type="text/javascript" src="../assets/js/vendors.11287803b27f76e7d130.js"></script><script type="text/javascript" src="../assets/js/app.11287803b27f76e7d130.js"></script></body>
 </html>
