--- a/about-us.html
+++ b/about-us.html
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="icon" href="/favicon.ico">
   <title>Council of freedom</title>
-<link href="assets/css/app.124b537749952c4db21a.css" rel="stylesheet"></head>
+<link href="assets/css/app.11287803b27f76e7d130.css" rel="stylesheet"></head>
 <body class="inner-page about-us-page">
 
 <header class="header">
@@ -18,8 +18,7 @@
     </a>
 
     <div class="lang">
-      <!--TODO замінити силку-->
-      <a href="/en/index.html" class="lang-item">en</a>
+      <a href="/en/about-us.html" class="lang-item">en</a>
       <div class="lang-item active">ua</div>
     </div>
 
@@ -56,10 +55,6 @@
     </div>
     <div class="page_nav-item active">
       <div class="page_nav-item_text">Про нас</div>
-    </div>
-
-    <div class="page_nav-item">
-      <div class="page_nav-item_text" data-target-block="block-bank">Банківський переказ</div>
     </div>
   </div>
   <!--NAVIGATION FINISH-->
@@ -105,12 +100,19 @@
         <div class="block_one-info_title">Наша міссія:</div>
         <div class="block_one-info_text">
           <p>
-            Війна призупинила можливість поставок до України найважливішого - медикаментів та харчів. Багато людей
-            залишилось без даху над головою - їм надають прихисток, проте ресурсів не вистачає. Ми робимо усе можливе,
-            щоб попередити гуманітарну кризу. Долучайтеся до порятунку. Війна призупинила можливість поставок до України
-            найважливішого - медикаментів та харчів. Багато людей залишилось без даху над головою - їм надають
-            прихисток, проте ресурсів не вистачає. Ми робимо усе можливе, щоб попередити гуманітарну кризу. Долучайтеся
-            до порятунку.
+            Council of Freedom - об’єднання вільних духом людей з активною життєвою позицією.
+          </p>
+
+          <p>
+            Громадська організація Рада Свободи була створена у 2010 році для реалізації благодійних, соціальних та
+            гуманітарних проєктів.
+          </p>
+
+          <p>
+            Нашою головною ідеологією завжди було - зробити людей трохи щасливішими, а світ добрішими та кращим. У такий
+            скрутний для нашої країни час, ми не можемо залишитися осторонь, і зосереджуємо всі наші зусилля та інших не
+            байдужих людей на допомозі та підтримці тих, хто цього потребує, ставши заручниками жорстокої
+            несправедливості, яка змінила життя кожного українця, та і людей по всьому світу назавжди.
           </p>
         </div>
         <!--        <div class="block_one-info_btn">-->
@@ -118,7 +120,7 @@
         <!--        </div>-->
       </div>
       <div class="block_one-img">
-        <img width="769" height="542" src="/assets/img/about-us-img.png"/>
+        <img width="769" height="542" src="/assets/img/svg/logo.svg"/>
       </div>
     </div>
   </div>
@@ -194,8 +196,7 @@
     </a>
 
     <div class="lang">
-      <!--TODO замінити силку-->
-      <a href="/en/index.html" class="lang-item">en</a>
+      <a href="/en/about-us.html" class="lang-item">en</a>
       <div class="lang-item active">ua</div>
     </div>
 
@@ -225,5 +226,5 @@
     </div>
   </div>
 </footer>
-<script type="text/javascript" src="assets/js/vendors.124b537749952c4db21a.js"></script><script type="text/javascript" src="assets/js/app.124b537749952c4db21a.js"></script></body>
+<script type="text/javascript" src="assets/js/vendors.11287803b27f76e7d130.js"></script><script type="text/javascript" src="assets/js/app.11287803b27f76e7d130.js"></script></body>
 </html>
