--- a/en/index.html
+++ b/en/index.html
@@ -11,7 +11,7 @@
         content="Volunteer public organization Council of Freedom - Humanitarian and medical assistance to Ukrainians affected by Russian aggression."/>
   <meta name="google" content="notranslate">
   <title>Humanitarian and medical assistance to Ukrainians affected by Russian aggression - Freedom Council</title>
-<link href="../assets/css/app.124b537749952c4db21a.css" rel="stylesheet"></head>
+<link href="../assets/css/app.11287803b27f76e7d130.css" rel="stylesheet"></head>
 
 <body>
 
@@ -59,6 +59,9 @@
       <a href="infrastructure.html" class="page_nav-item_text">Raising funds for reconstruction of ruined buildings and
         infrastructure
       </a>
+    </div>
+    <div class="page_nav-item">
+      <a href="about-us.html" class="page_nav-item_text">About us</a>
     </div>
   </div>
   <!--NAVIGATION END-->
@@ -212,13 +215,18 @@
       <img width="1600" height="340" src="/assets/img/flag-banner.png"/>
     </div>
     <div class="width_block-info">
-      <div class="left_part">
+      <div class="left_part mobile-hidden">
         <img src="/assets/img/svg/icon-freedom.svg" alt="freedom icon">
       </div>
       <div class="right_part">
         <div class="width_block-info_title title-1">
           About the organization
         </div>
+
+        <div class="right_part-img desktop-hidden">
+          <img src="/assets/img/logo.png" alt="freedom logo">
+        </div>
+
         <div class="width_block-info_text">
           <p>The Council of Freedom is an association of free-spirited people with an active position in life.</p>
           <p>The international NGO “Council of Freedom” was established to implement charitable, social and humanitarian
@@ -271,6 +279,6 @@
     </div>
   </div>
 </footer>
-<script type="text/javascript" src="../assets/js/vendors.124b537749952c4db21a.js"></script><script type="text/javascript" src="../assets/js/app.124b537749952c4db21a.js"></script></body>
+<script type="text/javascript" src="../assets/js/vendors.11287803b27f76e7d130.js"></script><script type="text/javascript" src="../assets/js/app.11287803b27f76e7d130.js"></script></body>
 
 </html>
