seo fixes (description, titles, h1)

--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,10 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="keywords" content="Міжнародна громадська організація Рада Свободи, Рада Свободи, Свобода, МГО Рада Свободи, Громадська організація, Війна в Україні, Допомога українцям, Допомога Україні">
   <meta name="description"
         content="Волонтерська громадська організація Рада Свободи - Гуманітарна та медична допомога українцям, які постраждали внаслідок російської агресії."/>
-  <title>Гуманітарна та медична допомога українцям, які постраждали внаслідок російської агресії - Рада Свободи</title>
+  <title>Гуманітарна та медична допомога українцям, які постраждали внаслідок російської агресії</title>
   <!-- Google Tag Manager -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
       new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
