--- a/src/pages/en/get-humanitarian.html
+++ b/src/pages/en/get-humanitarian.html
@@ -9,8 +9,10 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="google" content="notranslate">
+  <meta name="keywords" content="Humanitarian aid, Help children, Non-government organisation">
+  <meta name="description" content="Getting the Humanitarian Assistance">
   <link rel="icon" href="/favicon.ico">
-  <title>Council of freedom</title>
+  <title>Getting the Humanitarian Assistance</title>
   <!-- Google Tag Manager -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
       new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -77,9 +79,9 @@
       </picture>
     </div>
     <div class="description_info">
-      <h2 class="description_info-title">
+      <h1 class="description_info-title">
         Getting the Humanitarian Assistance
-      </h2>
+      </h1>
       <div class="description_info-text">
         <p>
           Ukrainian Legal Advisory Group has prepared a map of destruction of the civil infrastructure caused by the
