--- a/src/pages/infrastructure.html
+++ b/src/pages/infrastructure.html
@@ -8,8 +8,10 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="keywords" content="Гуманітарна допомога, Війна в Україні, Відновлення житла, Відновлення міст, Відновлення України, Інвестиції в Україну">
+  <meta name="description" content="Збір коштів на відновлення зруйнованого житла та інфраструктури">
   <link rel="icon" href="/favicon.ico">
-  <title>Council of freedom</title>
+  <title>Збір коштів на відновлення зруйнованого житла та інфраструктури</title>
   <!-- Google Tag Manager -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
       new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -79,9 +81,9 @@
       </picture>
     </div>
     <div class="description_info">
-      <h2 class="description_info-title">
+      <h1 class="description_info-title">
         Збір коштів на відновлення зруйнованого житла та інфраструктури
-      </h2>
+      </h1>
       <div class="description_info-text">
         <p>1,8 трлн гривень — найскромніша оцінка збитків інфраструктурі України за місяць війни</p>
         <p>Лише за перші три тижні російського вторгнення збитки, завдані інфраструктурі України, досягли щонайменше
