--- a/src/pages/about-humanitarian-aid.html
+++ b/src/pages/about-humanitarian-aid.html
@@ -8,8 +8,10 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="keywords" content="Гуманітарна допомога, Війна в Україні, Допомога українцям, Допомога Україні, Україна">
+  <meta name="description" content="Збір коштів для гуманітарної допомоги">
   <link rel="icon" href="/favicon.ico">
-  <title>Council of freedom</title>
+  <title>Збір коштів для гуманітарної допомоги</title>
   <!-- Google Tag Manager -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
       new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -81,9 +83,9 @@
       </picture>
     </div>
     <div class="description_info">
-      <h2 class="description_info-title">
+      <h1 class="description_info-title">
         Збір коштів для гуманітарної допомоги
-      </h2>
+      </h1>
       <div class="description_info-text">
         <p>
           Багато логістичних ланцюжків повністю розірвані, багато підприємств знищено фізично, деякі - не можуть
