--- a/src/pages/en/about-humanitarian-aid.html
+++ b/src/pages/en/about-humanitarian-aid.html
@@ -9,8 +9,10 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="google" content="notranslate">
+  <meta name="keywords" content="Humanitarian aid, War in Ukraine, Ukraine">
+  <meta name="description" content="Fundraising for humanitarian assistance">
   <link rel="icon" href="/favicon.ico">
-  <title>Council of freedom</title>
+  <title>Fundraising for humanitarian assistance</title>
   <!-- Google Tag Manager -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
       new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -82,9 +84,9 @@
       </picture>
     </div>
     <div class="description_info">
-      <h2 class="description_info-title">
+      <h1 class="description_info-title">
         Fundraising for humanitarian assistance
-      </h2>
+      </h1>
       <div class="description_info-text">
         <p>
           Many logistic chains are completely disrupted now, a great deal of enterprises was physically destroyed, some
