--- a/src/pages/en/send-humanitarian.html
+++ b/src/pages/en/send-humanitarian.html
@@ -9,8 +9,10 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="google" content="notranslate">
+  <meta name="keywords" content="Humanitarian aid, War in Ukraine, refugees, migrants">
+  <meta name="description" content="Giving campaign">
   <link rel="icon" href="/favicon.ico">
-  <title>Council of freedom</title>
+  <title>Giving campaign</title>
   <!-- Google Tag Manager -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
       new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -77,9 +79,9 @@
       </picture>
     </div>
     <div class="description_info">
-      <h2 class="description_info-title">
+      <h1 class="description_info-title">
         Giving campaign
-      </h2>
+      </h1>
       <div class="description_info-text">
         <p>
           Civilians of cities besieged and continuously exposed to fire of the russian troops are being locked within
