--- a/en/index.html
+++ b/en/index.html
@@ -7,11 +7,12 @@
   <link rel="canonical" href="https://councilfreedom.com/en/"/>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="NGO Council of Freedom, Freedom Council, War in Ukraine, Help Ukraine, Help Ukrainians, Council of freedom">
   <meta name="description"
         content="Volunteer public organization Council of Freedom - Humanitarian and medical assistance to Ukrainians affected by Russian aggression."/>
   <meta name="google" content="notranslate">
-  <title>Humanitarian and medical assistance to Ukrainians affected by Russian aggression - Freedom Council</title>
-<link href="../assets/css/app.11287803b27f76e7d130.css" rel="stylesheet"></head>
+  <title>Humanitarian and medical assistance to Ukrainians affected by Russian aggression</title>
+<link href="../assets/css/app.8d6a3443efaa7cf0913c.css" rel="stylesheet"></head>
 
 <body>
 
@@ -279,6 +280,6 @@
     </div>
   </div>
 </footer>
-<script type="text/javascript" src="../assets/js/vendors.11287803b27f76e7d130.js"></script><script type="text/javascript" src="../assets/js/app.11287803b27f76e7d130.js"></script></body>
+<script type="text/javascript" src="../assets/js/vendors.8d6a3443efaa7cf0913c.js"></script><script type="text/javascript" src="../assets/js/app.8d6a3443efaa7cf0913c.js"></script></body>
 
 </html>
