--- a/en/infrastructure.html
+++ b/en/infrastructure.html
@@ -7,9 +7,11 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="google" content="notranslate">
+  <meta name="keywords" content="Humanitarian aid, War in Ukraine, refugees, migrants">
+  <meta name="description" content="Raising funds for reconstruction of ruined buildings and infrastructure">
   <link rel="icon" href="/favicon.ico">
-  <title>Council of freedom</title>
-<link href="../assets/css/app.11287803b27f76e7d130.css" rel="stylesheet"></head>
+  <title>Raising funds for reconstruction of ruined buildings and infrastructure</title>
+<link href="../assets/css/app.8d6a3443efaa7cf0913c.css" rel="stylesheet"></head>
 <body class="inner-page infrastructure-page">
 
 <header class="header">
@@ -70,9 +72,9 @@
       </picture>
     </div>
     <div class="description_info">
-      <h2 class="description_info-title">
+      <h1 class="description_info-title">
         Raising funds for reconstruction of ruined buildings and infrastructure
-      </h2>
+      </h1>
       <div class="description_info-text">
         <p>
           On a conservative estimate, the war damage to Ukrainian infrastructure during this month has grown to 1,8
@@ -160,5 +162,5 @@
     </div>
   </div>
 </footer>
-<script type="text/javascript" src="../assets/js/vendors.11287803b27f76e7d130.js"></script><script type="text/javascript" src="../assets/js/app.11287803b27f76e7d130.js"></script></body>
+<script type="text/javascript" src="../assets/js/vendors.8d6a3443efaa7cf0913c.js"></script><script type="text/javascript" src="../assets/js/app.8d6a3443efaa7cf0913c.js"></script></body>
 </html>
