--- a/en/send-humanitarian.html
+++ b/en/send-humanitarian.html
@@ -7,9 +7,11 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="google" content="notranslate">
+  <meta name="keywords" content="Humanitarian aid, War in Ukraine, refugees, migrants">
+  <meta name="description" content="Giving campaign">
   <link rel="icon" href="/favicon.ico">
-  <title>Council of freedom</title>
-<link href="../assets/css/app.11287803b27f76e7d130.css" rel="stylesheet"></head>
+  <title>Giving campaign</title>
+<link href="../assets/css/app.8d6a3443efaa7cf0913c.css" rel="stylesheet"></head>
 <body class="inner-page">
 
 <header class="header">
@@ -67,9 +69,9 @@
       </picture>
     </div>
     <div class="description_info">
-      <h2 class="description_info-title">
+      <h1 class="description_info-title">
         Giving campaign
-      </h2>
+      </h1>
       <div class="description_info-text">
         <p>
           Civilians of cities besieged and continuously exposed to fire of the russian troops are being locked within
@@ -134,5 +136,5 @@
     </div>
   </div>
 </footer>
-<script type="text/javascript" src="../assets/js/vendors.11287803b27f76e7d130.js"></script><script type="text/javascript" src="../assets/js/app.11287803b27f76e7d130.js"></script></body>
+<script type="text/javascript" src="../assets/js/vendors.8d6a3443efaa7cf0913c.js"></script><script type="text/javascript" src="../assets/js/app.8d6a3443efaa7cf0913c.js"></script></body>
 </html>
