--- a/index.html
+++ b/index.html
@@ -9,16 +9,13 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="keywords" content="Міжнародна громадська організація Рада Свободи, Рада Свободи, Свобода, МГО Рада Свободи, Громадська організація, Війна в Україні, Допомога українцям, Допомога Україні">
   <meta name="description"
         content="Волонтерська громадська організація Рада Свободи - Гуманітарна та медична допомога українцям, які постраждали внаслідок російської агресії."/>
-  <title>Гуманітарна та медична допомога українцям, які постраждали внаслідок російської агресії - Рада Свободи</title>
-<link href="assets/css/app.11287803b27f76e7d130.css" rel="stylesheet"></head>
+  <title>Гуманітарна та медична допомога українцям, які постраждали внаслідок російської агресії</title>
+<link href="assets/css/app.8d6a3443efaa7cf0913c.css" rel="stylesheet"></head>
 
 <body>
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W3VJ28P"
-                  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
 
 <header class="header">
   <div class="container">
@@ -305,6 +302,6 @@
     </div>
   </div>
 </footer>
-<script type="text/javascript" src="assets/js/vendors.11287803b27f76e7d130.js"></script><script type="text/javascript" src="assets/js/app.11287803b27f76e7d130.js"></script></body>
+<script type="text/javascript" src="assets/js/vendors.8d6a3443efaa7cf0913c.js"></script><script type="text/javascript" src="assets/js/app.8d6a3443efaa7cf0913c.js"></script></body>
 
 </html>
