--- a/about-humanitarian-aid.html
+++ b/about-humanitarian-aid.html
@@ -6,9 +6,11 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="keywords" content="Гуманітарна допомога, Війна в Україні, Допомога українцям, Допомога Україні, Україна">
+  <meta name="description" content="Збір коштів для гуманітарної допомоги">
   <link rel="icon" href="/favicon.ico">
-  <title>Council of freedom</title>
-<link href="assets/css/app.11287803b27f76e7d130.css" rel="stylesheet"></head>
+  <title>Збір коштів для гуманітарної допомоги</title>
+<link href="assets/css/app.8d6a3443efaa7cf0913c.css" rel="stylesheet"></head>
 <body class="inner-page">
 
 <header class="header">
@@ -71,9 +73,9 @@
       </picture>
     </div>
     <div class="description_info">
-      <h2 class="description_info-title">
+      <h1 class="description_info-title">
         Збір коштів для гуманітарної допомоги
-      </h2>
+      </h1>
       <div class="description_info-text">
         <p>
           Багато логістичних ланцюжків повністю розірвані, багато підприємств знищено фізично, деякі - не можуть
@@ -134,5 +136,5 @@
     </div>
   </div>
 </footer>
-<script type="text/javascript" src="assets/js/vendors.11287803b27f76e7d130.js"></script><script type="text/javascript" src="assets/js/app.11287803b27f76e7d130.js"></script></body>
+<script type="text/javascript" src="assets/js/vendors.8d6a3443efaa7cf0913c.js"></script><script type="text/javascript" src="assets/js/app.8d6a3443efaa7cf0913c.js"></script></body>
 </html>
