--- a/get-humanitarian.html
+++ b/get-humanitarian.html
@@ -6,9 +6,11 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="keywords" content="Гуманітарна допомога, Допомога дітям, Біженці, Переселенці, Житло для біженців, Житло для переселенців">
+  <meta name="description" content="Отримати гуманітарну допомогу">
   <link rel="icon" href="/favicon.ico">
-  <title>Council of freedom</title>
-<link href="assets/css/app.11287803b27f76e7d130.css" rel="stylesheet"></head>
+  <title>Отримати гуманітарну допомогу</title>
+<link href="assets/css/app.8d6a3443efaa7cf0913c.css" rel="stylesheet"></head>
 <body class="inner-page">
 
 <header class="header">
@@ -66,9 +68,9 @@
       </picture>
     </div>
     <div class="description_info">
-      <h2 class="description_info-title">
+      <h1 class="description_info-title">
         Отримати гуманітарну допомогу
-      </h2>
+      </h1>
       <div class="description_info-text">
         <p>
           Українська юридична консультативна група зробила мапу руйнування цивільної інфраструктури збройними силами
@@ -141,5 +143,5 @@
     </div>
   </div>
 </footer>
-<script type="text/javascript" src="assets/js/vendors.11287803b27f76e7d130.js"></script><script type="text/javascript" src="assets/js/app.11287803b27f76e7d130.js"></script></body>
+<script type="text/javascript" src="assets/js/vendors.8d6a3443efaa7cf0913c.js"></script><script type="text/javascript" src="assets/js/app.8d6a3443efaa7cf0913c.js"></script></body>
 </html>
