added alternate meta tags

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="ua">
+<html lang="uk">
 <head>
   <!--deletestart-->
   <link rel="stylesheet" type="text/css" href="assets/scss/main.scss"/>
   <!--deleteend-->
   <link rel="icon" href="/favicon.ico">
   <link rel="canonical" href="https://councilfreedom.com/"/>
+  <link rel="alternate" hreflang="en" href="https://councilfreedom.com/en/"/>
   <meta name="google-site-verification" content="83QIW2_nHMFXrShPVLi6DcOHiabcX2un0EIbuA3H4Yg"/>
   <meta charset="UTF-8">
   <meta name="viewport"
