--- a/src/pages/en/index.html
+++ b/src/pages/en/index.html
@@ -5,6 +5,7 @@
   <!--deletestart-->
   <link rel="stylesheet" type="text/css" href="assets/scss/main.scss"/>
   <!--deleteend-->
+  <link rel="alternate" hreflang="uk" href="https://councilfreedom.com/"/>
   <link rel="icon" href="/favicon.ico">
   <link rel="canonical" href="https://councilfreedom.com/en/"/>
   <meta charset="UTF-8">
