--- a/src/pages/en/send-humanitarian.html
+++ b/src/pages/en/send-humanitarian.html
@@ -4,6 +4,7 @@
   <!--deletestart-->
   <link rel="stylesheet" type="text/css" href="../assets/scss/main.scss"/>
   <!--deleteend-->
+  <link rel="alternate" hreflang="uk" href="https://councilfreedom.com/send-humanitarian.html"/>
   <meta charset="UTF-8">
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
