--- a/src/pages/get-humanitarian.html
+++ b/src/pages/get-humanitarian.html
@@ -1,9 +1,10 @@
 <!doctype html>
-<html lang="ua">
+<html lang="uk">
 <head>
   <!--deletestart-->
   <link rel="stylesheet" type="text/css" href="../assets/scss/main.scss"/>
   <!--deleteend-->
+  <link rel="alternate" hreflang="en" href="https://councilfreedom.com/en/about-humanitarian-aid.html"/>
   <meta charset="UTF-8">
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
