--- a/src/pages/send-humanitarian.html
+++ b/src/pages/send-humanitarian.html
@@ -4,7 +4,7 @@
   <!--deletestart-->
   <link rel="stylesheet" type="text/css" href="../assets/scss/main.scss"/>
   <!--deleteend-->
-  <link rel="alternate" hreflang="en" href="https://councilfreedom.com/en/infrastructure.html"/>
+  <link rel="alternate" hreflang="en" href="https://councilfreedom.com/en/send-humanitarian.html"/>
   <meta charset="UTF-8">
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
